--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head><link rel="shortcut icon" href="https://ssl.gstatic.com/docs/spreadsheets/forms/favicon_jfk2.png" type="image/x-icon">
+<!DOCTYPE HTML>
+<html>
+<head>
+<link rel="shortcut icon" href="https://ssl.gstatic.com/docs/spreadsheets/forms/favicon_jfk2.png" type="image/x-icon">
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=10; chrome=1;">
 <meta name="fragment" content="!">
@@ -329,7 +332,8 @@
 								</li>
 							</ul>
 							<div class="error-message"></div>
-							<div class="required-message">Det här är en obligatorisk fråga</div>
+							Page 1/6 <br>
+							<progress value="1" max="6"></progress>
 						</div>
 					</div>
 				</div>
