adding input type tel och email

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 									<span class="ss-required-asterisk">*</span>
 								</div>								
 							</label>
-							<input type="text" name="entry.1190667692" value="" class="ss-q-short" id="entry_1190667692" dir="auto" aria-label="What is your phone number? phone helper " aria-required="true" required="" title="">
+							<input type="tel" name="entry.1190667692" value="" class="ss-q-short" id="entry_1190667692" dir="auto" aria-label="What is your phone number? phone helper " aria-required="true" required="" title="">
 							<div class="error-message"></div>
 							<div class="required-message">Det här är en obligatorisk fråga</div>
 
@@ -616,10 +616,16 @@
 									<span class="ss-required-asterisk">*</span>
 								</div>								
 							</label>
-							<input type="text" name="entry.832651433" value="" class="ss-q-short" id="entry_832651433" dir="auto" aria-label="What is your e-mail? mail helper " aria-required="true" required="" title="">
+							<input type="email" name="entry.832651433" value="" class="ss-q-short" id="entry_832651433" dir="auto" aria-label="What is your e-mail? mail helper " aria-required="true" required="" title="">
 							<div class="error-message"></div>
 							<div class="required-message">Det här är en obligatorisk fråga</div>
-
+<!-- html5 
+	<input placeholder="your name here"
+	<input type="tel"
+	<input type="email"
+	<input type="text" required på text
+	autocomplete="off" i input eller form-tag
+	-->
 						</div>
 					</div>
 				</div>
