testar med länkar mellan sidorna etc.

--- a/index.html
+++ b/index.html
@@ -189,9 +189,11 @@
 		background-color:#D5D6D2;
 		}
 		
+		
 		.q1, .q2, .q3, .q4, .q5 {
-		display: none;
+		display: block;
 		}
+		
 	</style> <!-- End of CSS -->
 
 
@@ -253,7 +255,7 @@
 			-->
 			
 			<ol role="list" class="ss-question-list" style="padding-left: 0">
-				<div class="ss-form-question errorbox-good" role="listitem">				
+				<div class="ss-form-question errorbox-good q1" role="listitem">				<!-- start of q1 -->
 					<h1 class="heading">Innovation </h1>
 					<img class="main_image" src="innovation_credited.jpg" alt="Skype-user">
 					<div class="preamble">
@@ -334,12 +336,31 @@
 							<div class="error-message"></div>
 							Page 1/6 <br>
 							<progress value="1" max="6"></progress>
+						 	<a href="index.html#q2">Question 2</a> 
 						</div>
 					</div>
-				</div>
+				</div> <!-- End of q1 -->
 
-				
-				<div class="ss-form-question errorbox-good" role="listitem">
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<p>
+				<a name="q2" id="q2">Question2</a> 
+				<div class="ss-form-question errorbox-good q2" role="listitem">  <!-- start of q2 -->
 					<h1>Society </h1>
 					<img class="main_image" src="society_credited.jpg" alt="On parental leave">
 					Sweden ranks as one of the world’s most gender-egalitarian countries. An extensive welfare system makes it easier for both genders to balance work and family life. For instance, in Sweden, parents are entitled to 480 days of parental leave when a child is born or adopted. The parental leave is financed jointly by all Swedes through the tax system. 
@@ -396,7 +417,7 @@
 							<div class="required-message">Det här är en obligatorisk fråga</div>
 						</div>
 					</div>
-				</div>
+				</div>  <!-- End of q2 -->
 
 				
 				<div class="ss-form-question errorbox-good" role="listitem">
@@ -584,7 +605,7 @@
 									<span class="ss-required-asterisk">*</span>
 								</div>								
 							</label>
-							<input type="text" name="entry.1091911802" value="" class="ss-q-short" id="entry_1091911802" dir="auto" aria-label="What is your name name helper " aria-required="true" required="" title="">
+							<input type="text" name="entry.1091911802" value="" class="ss-q-short" id="entry_1091911802" dir="auto" aria-label="What is your name name helper " aria-required="true" required="" title="" placeholder="Anders Johansson">
 							<div class="error-message"></div>
 							<div class="required-message">Det här är en obligatorisk fråga</div>
 
@@ -600,7 +621,7 @@
 									<span class="ss-required-asterisk">*</span>
 								</div>								
 							</label>
-							<input type="tel" name="entry.1190667692" value="" class="ss-q-short" id="entry_1190667692" dir="auto" aria-label="What is your phone number? phone helper " aria-required="true" required="" title="">
+							<input type="tel" name="entry.1190667692" value="" class="ss-q-short" id="entry_1190667692" dir="auto" aria-label="What is your phone number? phone helper " aria-required="true" required="" title="" placeholder="+917 056 1234567">
 							<div class="error-message"></div>
 							<div class="required-message">Det här är en obligatorisk fråga</div>
 
@@ -616,14 +637,11 @@
 									<span class="ss-required-asterisk">*</span>
 								</div>								
 							</label>
-							<input type="email" name="entry.832651433" value="" class="ss-q-short" id="entry_832651433" dir="auto" aria-label="What is your e-mail? mail helper " aria-required="true" required="" title="">
+							<input type="email" name="entry.832651433" value="" class="ss-q-short" id="entry_832651433" dir="auto" aria-label="What is your e-mail? mail helper " aria-required="true" required="" title="" placeholder="E-mailadress">
 							<div class="error-message"></div>
 							<div class="required-message">Det här är en obligatorisk fråga</div>
 <!-- html5 
-	<input placeholder="your name here"
-	<input type="tel"
-	<input type="email"
-	<input type="text" required på text
+	<input type="text" required, på text
 	autocomplete="off" i input eller form-tag
 	-->
 						</div>
