--- a/index.html
+++ b/index.html
@@ -401,7 +401,8 @@
 								</span>
 							</span>
 							<div class="error-message"></div>
-							<div class="required-message">Det här är en obligatorisk fråga</div>
+							Question 2/6 <br>
+							<progress value="2" max="6"></progress>							
 						</div>
 					</div>
 				</div>  <!-- End of q2 -->
@@ -463,7 +464,8 @@
 								</span>
 							</span>
 							<div class="error-message"></div>
-							<div class="required-message">Det här är en obligatorisk fråga</div>
+							Question 3/6 <br>
+							<progress value="3" max="6"></progress>							
 						</div>
 					</div>
 				</div>   <!-- End of q3 -->
@@ -529,7 +531,8 @@
 								</span>
 							</span>
 							<div class="error-message"></div>
-							<div class="required-message">Det här är en obligatorisk fråga</div>
+							Question 4/6 <br>
+							<progress value="4" max="6"></progress>													
 						</div>
 					</div>
 				</div>   <!-- End of q4 -->
@@ -586,7 +589,8 @@
 								</span>
 							</span>
 							<div class="error-message"></div>
-							<div class="required-message">Det här är en obligatorisk fråga</div>
+							Question 5/6 <br>
+							<progress value="5" max="6"></progress>							
 						</div>
 					</div>
 				</div>    <!-- End of q5 -->
@@ -633,9 +637,9 @@
 							</label>
 							<input type="email" name="entry.832651433" value="" class="ss-q-short" id="entry_832651433" dir="auto" aria-label="What is your e-mail? mail helper " aria-required="true" required="" title="" placeholder="your.email@domain.com">
 							<div class="error-message"></div>
-							<div class="required-message">Det här är en obligatorisk fråga</div>
+							Question 6/6 <br>
+							<progress value="6" max="6"></progress>														
 <!-- html5 
-	<input type="text" required, på text
 	autocomplete="off" i input eller form-tag
 	-->
 						</div>
