--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	<div class="ss-top-of-page">
 		<div class="ss-form-heading">
 			<h1 class="ss-form-title" dir="ltr">ADIBF Sweden Quiz</h1>
-			<div class="ss-form-desc ss-no-ignore-whitespace">A quiz with nice prices</div>
+			<div class="ss-form-desc ss-no-ignore-whitespace">A quiz with nice prices. Test verification of mandatory fields</div>
 
 			<hr class="ss-email-break" style="display:none;">
 			<div class="ss-required-asterisk" aria-hidden="true">*Obligatorisk</div>
@@ -603,7 +603,7 @@
 									<span class="ss-required-asterisk">*</span>
 								</div>								
 							</label>
-							<input type="text" name="entry.1091911802" value="" class="ss-q-short" id="entry_1091911802" dir="auto" aria-label="What is your name name helper " aria-required="true" required="" title="" placeholder="Anders Johansson">
+							<input type="text" name="entry.1091911802" value="" class="ss-q-short" id="entry_1091911802" dir="auto" aria-label="What is your name name helper " aria-required="true" required="" title="" placeholder="FirstName LastName">
 							<div class="error-message"></div>
 							<div class="required-message">Det här är en obligatorisk fråga</div>
 
