--- a/index.html
+++ b/index.html
@@ -281,7 +281,6 @@
 			<div class="ss-form-desc ss-no-ignore-whitespace">Now with radio buttons...</div>
 
 			<hr class="ss-email-break" style="display:none;">
-			<div class="ss-required-asterisk" aria-hidden="true">*Obligatorisk</div>
 		</div>
 	</div>
 	<div class="ss-form">
@@ -363,7 +362,7 @@
 									<li class="ss-choice-item">
 										<label>
 											<span class="ss-choice-item-control goog-inline-block">
-												<input type="radio" name="entry.902903876" value="1895" id="group_902903876_1" role="radio" class="ss-q-radio" aria-label="1895">
+												<input type="radio" name="entry.902903876" value="1895" id="group_902903876_1" role="radio" class="ss-q-radio" aria-label="1895" required>
 											</span>
 											<span class="ss-choice-label">1895</span>
 										</label>
@@ -427,7 +426,7 @@
 							<li class="ss-choice-item">
 								<label>
 									<span class="ss-choice-item-control goog-inline-block">
-										<input type="radio" name="entry.1416313824" value="450" id="group_1416313824_1" role="radio" class="ss-q-radio" aria-label="450">
+										<input type="radio" name="entry.1416313824" value="450" id="group_1416313824_1" role="radio" class="ss-q-radio" aria-label="450" required>
 									</span>
 									<span class="ss-choice-label">450</span>
 								</label>
@@ -495,7 +494,7 @@
 							<li class="ss-choice-item">
 								<label>
 									<span class="ss-choice-item-control goog-inline-block">
-										<input type="radio" name="entry.806044665" value="1%" id="group_806044665_1" role="radio" class="ss-q-radio" aria-label="1%">
+										<input type="radio" name="entry.806044665" value="1%" id="group_806044665_1" role="radio" class="ss-q-radio" aria-label="1%" required>
 									</span>
 									<span class="ss-choice-label">1%</span>
 								</label>
@@ -564,7 +563,7 @@
 							<li class="ss-choice-item">
 								<label>
 									<span class="ss-choice-item-control goog-inline-block">
-										<input type="radio" name="entry.454052814" value="800 AD" id="group_454052814_1" role="radio" class="ss-q-radio" aria-label="800 AD">
+										<input type="radio" name="entry.454052814" value="800 AD" id="group_454052814_1" role="radio" class="ss-q-radio" aria-label="800 AD" required>
 									</span>
 									<span class="ss-choice-label">800 AD</span>
 								</label>
@@ -626,7 +625,7 @@
 								<li class="ss-choice-item">
 									<label>
 										<span class="ss-choice-item-control goog-inline-block">
-											<input type="radio" name="entry.1902405508" value="8" id="group_1902405508_1" role="radio" class="ss-q-radio" aria-label="8" required="" aria-required="true">
+											<input type="radio" name="entry.1902405508" value="8" id="group_1902405508_1" role="radio" class="ss-q-radio" aria-label="8" required="" aria-required="true" required>
 										</span>
 										<span class="ss-choice-label">8</span>
 									</label>
