--- a/index.html
+++ b/index.html
@@ -189,64 +189,7 @@
 		background-color:#D5D6D2;
 		}
 		
-		<!--
-		The following is courtesy of http://viralpatel.net/blogs/css-radio-button-checkbox-background/
-		/*
-		Hide radio button (the round disc)
-		we will use just the label to create pushbutton effect
-		*/ -->
-		input[type=radio] {
-			display:none; 
-			margin:10px;
-		}
-		 
-		 <!--
-		/*
-		  Change the look'n'feel of labels (which are adjacent to radiobuttons).
-		  Add some margin, padding to label
-		*/ -->
-		input[type=radio] + label {
-		 display:inline-block;
-    margin:-2px;
-    padding: 4px 12px;
-    margin-bottom: 0;
-    font-size: 14px;
-    line-height: 20px;
-    color: #333;
-    text-align: center;
-    text-shadow: 0 1px 1px rgba(255,255,255,0.75);
-    vertical-align: middle;
-    cursor: pointer;
-    background-color: #f5f5f5;
-    background-image: -moz-linear-gradient(top,#fff,#e6e6e6);
-    background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#e6e6e6));
-    background-image: -webkit-linear-gradient(top,#fff,#e6e6e6);
-    background-image: -o-linear-gradient(top,#fff,#e6e6e6);
-    background-image: linear-gradient(to bottom,#fff,#e6e6e6);
-    background-repeat: repeat-x;
-    border: 1px solid #ccc;
-    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
-    border-bottom-color: #b3b3b3;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',endColorstr='#ffe6e6e6',GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-		}
-		<!--
-		/*
-		 Change background color for label next to checked radio button
-		 to make it look like highlighted button
-		*/ -->
-		input[type=radio]:checked + label { 
-		    background-image: none;
-    outline: 0;
-    -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-    -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-    box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-        background-color:#e0e0e0;
-		}
+	
 				
 				
 	</style> <!-- End of CSS -->
@@ -278,7 +221,7 @@
 	<div class="ss-top-of-page">
 		<div class="ss-form-heading">
 			<h1 class="ss-form-title" dir="ltr">ADIBF Sweden Quiz</h1>
-			<div class="ss-form-desc ss-no-ignore-whitespace">Now with radio buttons...</div>
+			<div class="ss-form-desc ss-no-ignore-whitespace">Now with radio buttons... and required stuff</div>
 
 			<hr class="ss-email-break" style="display:none;">
 		</div>
@@ -362,7 +305,7 @@
 									<li class="ss-choice-item">
 										<label>
 											<span class="ss-choice-item-control goog-inline-block">
-												<input type="radio" name="entry.902903876" value="1895" id="group_902903876_1" role="radio" class="ss-q-radio" aria-label="1895" required>
+												<input type="radio" name="entry.902903876" value="1895" id="group_902903876_1" role="radio" class="ss-q-radio" aria-label="1895">
 											</span>
 											<span class="ss-choice-label">1895</span>
 										</label>
