--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 	<div class="ss-top-of-page">
 		<div class="ss-form-heading">
 			<h1 class="ss-form-title" dir="ltr">ADIBF Sweden Quiz</h1>
-			<div class="ss-form-desc ss-no-ignore-whitespace">Now with radio buttons... and required stuff</div>
+			<div class="ss-form-desc ss-no-ignore-whitespace">Now with radio buttons... and required stuff and newly generated textfields</div>
 
 			<hr class="ss-email-break" style="display:none;">
 		</div>
