close windows no more javascript

--- a/thankyou.html
+++ b/thankyou.html
@@ -129,7 +129,9 @@ td.ss-scalenumbers, td.ss-scalerow, td.ss-leftlabel, td.ss-rightlabel, label.ss-
 
 
 <h1>Thank you for contribution </h1>
+If you scored 5 out of 5 you now have a chance of winning AED 100. Please close this window and look at a video instead...
 <a href="index.html">Post another quiz</a>
+<input type="button" value="Close this window" onclick="self.close()">
 
 </body>
 </html>
