adding required="" for texs

--- a/thankyou.html
+++ b/thankyou.html
@@ -125,13 +125,11 @@ td.ss-scalenumbers, td.ss-scalerow, td.ss-leftlabel, td.ss-rightlabel, label.ss-
 
 <div class="ss-form-container"><div class="ss-header-image"></div>
 <div class="ss-top-of-page"><div class="ss-form-heading"><h1 class="ss-form-title" dir="ltr">Quiz</h1>
-<div class="ss-form-desc ss-no-ignore-whitespace">Quiz to the Fair, requires Internet Connection</div>
+<div class="ss-form-desc ss-no-ignore-whitespace"></div>
 
 
 <h1>Thank you for contribution </h1>
 If you scored 5 out of 5 you now have a chance of winning AED 100. Please close this window and look at a video instead...
-<a href="index.html">Post another quiz</a>
-<input type="button" value="Close this window" onclick="self.close()">
-
+ 
 </body>
 </html>
