--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
 								<div class="ss-q-title">What is your name</div>
 								<div class="ss-q-help ss-secondary-text" dir="ltr"></div>
 							</label>
-							<input type="text" name="entry.1091911802" value="" class="ss-q-short" id="entry_1091911802" dir="auto" aria-label="What is your name" title=""  placeholder="FirstName LastName">
+							<input type="text" name="entry.1091911802" value="" class="ss-q-short" id="entry_1091911802" dir="auto" aria-label="What is your name" title=""  placeholder="FirstName LastName" required="">
 							<div class="error-message"></div>
 							<div class="required-message">Det här är en obligatorisk fråga</div>
 						</div>
@@ -619,7 +619,7 @@
 								<div class="ss-q-title">What is your phone number?</div>
 								<div class="ss-q-help ss-secondary-text" dir="ltr"></div>
 							</label>
-							<input type="tel" name="entry.1190667692" value="" class="ss-q-short" id="entry_1190667692" dir="auto" aria-label="What is your phone number?  " title="" placeholder="+917 056 1234567">
+							<input type="tel" name="entry.1190667692" value="" class="ss-q-short" id="entry_1190667692" dir="auto" aria-label="What is your phone number?" title="" placeholder="+917 056 1234567" required="">
 							<div class="error-message"></div>
 							<div class="required-message">Det här är en obligatorisk fråga</div>
 						</div>
@@ -632,7 +632,7 @@
 								<div class="ss-q-title">What is your e-mail?</div>
 								<div class="ss-q-help ss-secondary-text" dir="ltr"></div>
 							</label>
-							<input type="email" name="entry.832651433" value="" class="ss-q-short" id="entry_832651433" dir="auto" aria-label="What is your e-mail?" title="" placeholder="your.email@domain.com">
+							<input type="email" name="entry.832651433" value="" class="ss-q-short" id="entry_832651433" dir="auto" aria-label="What is your e-mail?" title="" placeholder="your.email@domain.com" required="">
 							<div class="error-message"></div>
 							<div class="required-message">Det här är en obligatorisk fråga</div>
 						</div>
