--- a/index.html
+++ b/index.html
@@ -206,6 +206,23 @@
 		font-family: calibri,'Crimson Text',Garamond,Georgia,'Times New Roman',serif;
 		}
 		
+		
+		ul.nobel {
+		list-style-type: none;
+		padding: 0;
+		margin: 0;
+		}
+		
+		li.medal {
+		background: url('nobel.png') no-repeat left top;
+		height: 40px;
+		padding-left: 44px;
+		}
+		
+		span.ss-choice-label{
+			font-size:200%;
+		}
+		
 		div.ss-form-entry{
 		color:#344A48;
 		}
@@ -291,14 +308,13 @@
 						<p>One of the most widely recognized Swedish inventors is Alfred Nobel. 
 						In his last will and testament, he donated 94% of his fortune, used to create the Nobel Prize.  
 						The Prize is awarded to those recognized for their “benefit to mankind” in five categories:  
-								
-						<img class="portrait_body_image" src="Nobel_Prize.png" alt="Medal">
-						<ul>
-							<li>Physics, 
-							<li>Chemistry 
-							<li>Physiology or Medicine
-							<li>Literature
-							<li>Peace
+						<p>
+						<ul class="nobel">
+							<li class="medal">Physics, 
+							<li class="medal">Chemistry 
+							<li class="medal">Physiology or Medicine
+							<li class="medal">Literature
+							<li class="medal">Peace
 						</ul>
 						<p>
 						In 1968, Sweden's Central Bank instituted "The Sveriges Riksbank Prize in Economic Sciences in memory of Alfred Nobel, which has since been awarded together with the Nobel Prizes.
