--- a/thankyou.html
+++ b/thankyou.html
@@ -44,6 +44,7 @@ h1.ss-form-title {
   margin: 0 0 20px;
   min-height: 80px;
   padding: 20px 360px 20px 20px;
+  background: url('Lenas_hand.png')
 }
 .ss-resp-card .ss-header-image {
   height: 90px;
@@ -128,8 +129,11 @@ td.ss-scalenumbers, td.ss-scalerow, td.ss-leftlabel, td.ss-rightlabel, label.ss-
 <div class="ss-form-desc ss-no-ignore-whitespace"></div>
 
 
-<h1>Thank you for contribution </h1>
-If you scored 5 out of 5 you now have a chance of winning AED 100. Please close this window and look at a video instead...
+<h1>Thank you for taking part in the quiz!</h1>
+The lucky winners of the Sweden quiz will receive vouchers from Ikea. Three winners will be announced on the Embassy Facebook page every evening during the book fair after 7pm.
+<p>
+Close this window by pushing the house/home button on the left bottom of this page. There are film clips to watch and more information about Sweden. 
+We also invite you to write in our guest book, "Become a writer for a day" or take a "Swelfie" from the pavilion. Enjoy!
  
 </body>
 </html>
