--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 		<div class="ss-top-of-page">
 			<div class="ss-form-heading">
 				<h1 class="ss-form-title" dir="ltr">Sweden Guest of Honor Quiz!</h1>
-				<div class="ss-form-desc ss-no-ignore-whitespace">Nu med Pippi</div>
+				<div class="ss-form-desc ss-no-ignore-whitespace"></div>
 				<hr class="ss-email-break" style="display:none;">
 			</div>
 		</div>
